--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,7 +19,7 @@
 	<div class="container">
 		<div class="header__inner">
 			<a href="#">
-				<img src="images/logo.png">
+				<img src="images/logo.png" alt="">
 			</a>
 			<div class="header__block" >
 				<label class="header__search" id="popup">
@@ -44,7 +44,7 @@
 		<div class="slider__img">
 			<picture>
 				<source srcset="images/slider_1.webp" type="">
-					<img src="images/slider_1.jpg">
+					<img src="images/slider_1.jpg" alt="">
 			</picture>			
 		</div>
 		<div class="slider__content">
@@ -58,7 +58,7 @@
 		<div class="slider__img">
 			<picture>
 				<source srcset="images/slider_1.webp" type="">
-					<img src="images/slider_1.jpg">
+					<img src="images/slider_1.jpg" alt="">
 			</picture>
 		</div>
 		<div class="slider__content">
@@ -72,7 +72,7 @@
 		<div class="slider__img">
 			<picture>
 				<source srcset="images/slider_1.webp" type="">
-					<img src="images/slider_1.jpg">
+					<img src="images/slider_1.jpg" alt="">
 			</picture>
 		</div>
 		<div class="slider__content">
@@ -103,22 +103,22 @@
 	<div class="container">
 		<div class="servis__inner">
 			<div class="servis__block" data-aos="fade-up-right" data-aos-duration="1500" data-aos-once="true">
-				<img class="servis__img" src="images/s1.png">
+				<img class="servis__img" src="images/s1.png" alt="">
 				<p class="servis__title">Fast <br> Delivery</p>
 				<span class="servis__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard </span>
 			</div>
 			<div class="servis__block" data-aos="fade-up-left" data-aos-duration="1500" data-aos-once="true">
-				<img class="servis__img" src="images/s2.png">
+				<img class="servis__img" src="images/s2.png" alt="">
 				<p class="servis__title">Great Customer Service</p>
 				<span class="servis__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard </span>
 			</div>
 			<div class="servis__block" data-aos="fade-up-right" data-aos-duration="1500" data-aos-once="true">
-				<img class="servis__img" src="images/s3.png">
+				<img class="servis__img" src="images/s3.png" alt="">
 				<p class="servis__title">Original <br> Plants</p>
 				<span class="servis__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard </span>
 			</div>
 			<div class="servis__block" data-aos="fade-up-left" data-aos-duration="1500" data-aos-once="true">
-				<img class="servis__img" src="images/s4.png">
+				<img class="servis__img" src="images/s4.png" alt="">
 				<p class="servis__title">Affordable <br> Price</p>
 				<span class="servis__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard </span>
 			</div>
@@ -139,7 +139,7 @@
 		</div>
 		<div class="featured__inner">
 			<div class="featured__items" data-aos="fade-up-right" data-aos-duration="3200" data-aos-once="true">
-				<img class="featured__img" src="images/f1.png">
+				<img class="featured__img" src="images/f1.png" alt="">
 				<p class="featured__text">Kaktus Plants</p>
 				<span class="featured__price">IDR 85.000</span>
 			</div>
@@ -149,17 +149,17 @@
 				<span class="featured__price">IDR 105.000</span>
 			</div>
 			<div class="featured__items" data-aos="fade-up-right" data-aos-duration="2000" data-aos-once="true">
-				<img class="featured__img" src="images/f3.png">
+				<img class="featured__img" src="images/f3.png" alt="">
 				<p class="featured__text">Kecubung Plants</p>
 				<span class="featured__price">IDR 85.000</span>
 			</div>
 			<div class="featured__items" data-aos="fade-up-right" data-aos-duration="3000" data-aos-once="true">
-				<img class="featured__img" src="images/f4.png">
+				<img class="featured__img" src="images/f4.png" alt="">
 				<p class="featured__text">Kecubung Plants</p>
 				<span class="featured__price">IDR 85.000</span>
 			</div>
 			<div class="featured__items" data-aos="fade-up-right" data-aos-duration="3200" data-aos-once="true">
-				<img class="featured__img" src="images/f5.png">
+				<img class="featured__img" src="images/f5.png" alt="">
 				<p class="featured__text">Kecubung Plants</p>
 				<span class="featured__price">IDR 85.000</span>
 			</div>
@@ -176,11 +176,11 @@
 			</div>
 			<picture class="buy__img-1"  data-aos="fade-right" data-aos-duration="2000" data-aos-once="true">
 				<source class="buy__img-1" srcset="images/bg1.webp" type="">
-				<img class="buy__img-1" src="images/bg1.jpg">
+				<img class="buy__img-1" src="images/bg1.jpg" alt="">
 			</picture>
 			<picture class="buy__img-2" data-aos="fade-left" data-aos-duration="2000" data-aos-once="true">
 				<source class="buy__img-2" srcset="images/bg2.webp" type="">
-				<img class="buy__img-2" src="images/bg2.jpg">
+				<img class="buy__img-2" src="images/bg2.jpg" alt="">
 			</picture>
 		</div>
 	</div>
@@ -193,7 +193,7 @@
 				<h3 class="shop__title">Get your favourites plant on our shop now</h3>
 				<a class="shop__link" href="#">Visit Shop</a>
 			</div>
-				<img class="shop__img" src="images/shop.png">		
+				<img class="shop__img" src="images/shop.png" alt="">		
 		</div>
 	</div>
 </section>
