--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			</a>
 			<div class="header__block" >
 				<label class="header__search" id="popup">
-					<input class="header__search-input"  type="text" name="" placeholder="search">
+					<input class="header__search-input"  type="text" placeholder="search">
 					<button class="header__search-img"></button>
 				</label>
 				<button class="header__basket"></button>
@@ -43,7 +43,7 @@
 		<div class="slider__inner swiper-slide">
 		<div class="slider__img">
 			<picture>
-				<source srcset="images/slider_1.webp" type="">
+				<source srcset="images/slider_1.webp">
 					<img src="images/slider_1.jpg" alt="">
 			</picture>			
 		</div>
@@ -57,7 +57,7 @@
 		<div class="slider__inner swiper-slide">
 		<div class="slider__img">
 			<picture>
-				<source srcset="images/slider_1.webp" type="">
+				<source srcset="images/slider_1.webp">
 					<img src="images/slider_1.jpg" alt="">
 			</picture>
 		</div>
@@ -71,7 +71,7 @@
 		<div class="slider__inner swiper-slide">
 		<div class="slider__img">
 			<picture>
-				<source srcset="images/slider_1.webp" type="">
+				<source srcset="images/slider_1.webp">
 					<img src="images/slider_1.jpg" alt="">
 			</picture>
 		</div>
@@ -175,11 +175,11 @@
 				<p class="buy__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi gravida gravida aliquam. Pellentesque et lobortis nisl. Sed et mauris justo. Nulla eu enim non mauris maximus dignissim. Maecenas vitae eros sapien. Quisque pellentesque tempus dignissim.</p>
 			</div>
 			<picture class="buy__img-1"  data-aos="fade-right" data-aos-duration="2000" data-aos-once="true">
-				<source class="buy__img-1" srcset="images/bg1.webp" type="">
+				<source class="buy__img-1" srcset="images/bg1.webp">
 				<img class="buy__img-1" src="images/bg1.jpg" alt="">
 			</picture>
 			<picture class="buy__img-2" data-aos="fade-left" data-aos-duration="2000" data-aos-once="true">
-				<source class="buy__img-2" srcset="images/bg2.webp" type="">
+				<source class="buy__img-2" srcset="images/bg2.webp">
 				<img class="buy__img-2" src="images/bg2.jpg" alt="">
 			</picture>
 		</div>
@@ -221,7 +221,7 @@
 			<div class="footer__items">
 				<p class="footer__f-t">Berlangganan Email Kami</p>
 				<form class="footer__flex-d">
-					<input class="footer__input" type="email" name="" placeholder="Masukan Alamat Email" required>
+					<input class="footer__input" type="email" placeholder="Masukan Alamat Email" required>
 					<button class="footer__btn" type="submit">Submit</button>
 				</form>
 			</div>
