--- a/index.html
+++ b/index.html
@@ -89,13 +89,12 @@
 	</div>
 		<button class="swiper-button-n btn-swip">
 			<span class="slider__b-r btn-l">Previous</span>
-			<p class="slider__b-t">Kaktus Plant</p>
+			<span class="slider__b-t">Kaktus Plant</span>
 		</button>
     <button class="swiper-button-p btn-swip">
     	<span class="slider__b-r btn-r">Next</span>
-			<p class="slider__b-t">Rahasia Plant</p>
+			<span class="slider__b-t">Rahasia Plant</span>
     </button>
-    </div>
     </div>
 </section>
  
@@ -207,13 +206,13 @@
 				<span class="footer__ded">Jl. Laksda Adisucipto No.51, Demangan, Kec. Depok, Kota Yogyakarta, Daerah Istimewa Yogyakarta 55282</span>
 			</div>
 			<div class="footer__items footer__flex">
-				<ul class="footer__item">
-					<p class="footer__item-t">Perusahaan</p>
+				<ul class="footer__item">					
+					<li><p class="footer__item-t">Perusahaan</p></li>
 					<li><a class="footer__link" href="#">Tentang Kami</a></li>
 					<li><a class="footer__link" href="#">Hubungi Kami</a></li>
 				</ul>
 				<ul class="footer__item">
-					<p class="footer__item-t">Produk</p>
+					<li><p class="footer__item-t">Produk</p></li>
 					<li><a class="footer__link" href="#">Tanaman</a></li>
 					<li><a class="footer__link" href="#">Tanaman Lain</a></li>
 				</ul>
