--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 				<img src="images/logo.png" alt="">
 			</a>
 			<div class="header__block" >
-				<label class="header__search" id="popup">
+				<form class="header__search" id="popup">
 					<input class="header__search-input"  type="text" placeholder="search">
 					<button class="header__search-img"></button>
-				</label>
+				</form>
 				<button class="header__basket"></button>
 				<div class="header__since">
 					<a class="header__btn white" href="#">Sign Up</a>
@@ -143,7 +143,7 @@
 				<span class="featured__price">IDR 85.000</span>
 			</div>
 			<div class="featured__items" data-aos="fade-up-right" data-aos-duration="3000" data-aos-once="true">
-				<img class="featured__img" src="images/f2.png">
+				<img class="featured__img" src="images/f2.png" alt="">
 				<p class="featured__text">Landak Plants</p>
 				<span class="featured__price">IDR 105.000</span>
 			</div>
@@ -228,8 +228,6 @@
 	</div>
 </footer>
 
-
-</body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
@@ -239,4 +237,6 @@
 
   });
 	</script>
+
+</body>
 </html> 
