--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
 </head>
 <body class="body">
 
- <header class="header" data-aos="fade-down" data-aos-duration="2000" data-aos-once="true">
+ <header class="header">
 	<div class="container">
 		<div class="header__inner">
 			<a href="#">
 				<img src="images/logo.png" alt="">
 			</a>
 			<div class="header__block" >
-				<form class="header__search" id="popup">
+				<div class="header__search" id="popup">
 					<input class="header__search-input"  type="text" placeholder="search">
 					<button class="header__search-img"></button>
-				</form>
+				</div>
 				<button class="header__basket"></button>
 				<div class="header__since">
 					<a class="header__btn white" href="#">Sign Up</a>
@@ -36,7 +36,7 @@
 	</div>
 </header>
 
-<section class="slider" data-aos="fade-up" data-aos-duration="2000" data-aos-once="true">
+<section class="slider">
 	<div class="container-s">
 		<div class=" mySwiper">
 		<div class="swiper-wrapper">
@@ -88,11 +88,11 @@
 		</div>			
 	</div>
 		<button class="swiper-button-n btn-swip">
-			<span class="slider__b-r btn-l">Previous</span>
+			<span class="slider__b-r btn-l">Previous</span><br>
 			<span class="slider__b-t">Kaktus Plant</span>
 		</button>
     <button class="swiper-button-p btn-swip">
-    	<span class="slider__b-r btn-r">Next</span>
+    	<span class="slider__b-r btn-r">Next</span><br>
 			<span class="slider__b-t">Rahasia Plant</span>
     </button>
     </div>
